fix(material/dialog): make align attribute into an input of dialog actions directive instead of css
Fixes multiple issues, such as self-documentation of the align attribute, type checking, better
bindings, and IDE support. Because align is not standard for HTMLDivElement, it doesn't make much
sense to assume end users to know they can use the align attribute.

Fixes #18479

--- a/src/material/dialog/dialog.scss
+++ b/src/material/dialog/dialog.scss
@@ -57,12 +57,13 @@ $mat-dialog-button-margin: 8px !default;
   // Pull the actions down to avoid their padding stacking with the dialog's padding.
   margin-bottom: -$mat-dialog-padding;
 
-  &[align='end'] {
-    justify-content: flex-end;
-  }
-
-  &[align='center'] {
+  // .align-center and .align-end are set by directive input "align"
+  // [align='center'] and [align='right'] are kept for backwards compability
+  &.mat-dialog-actions-align-center, &[align='center'] {
     justify-content: center;
+  }
+  &.mat-dialog-actions-align-end, &[align='end'] {
+    justify-content: flex-end;
   }
 
   .mat-button-base + .mat-button-base,
